# my-app-test

./: .gitignore  AI_VERIFICATION.md  APK_INSTRUCTIONS_AR.md  APK_INSTRUCTIONS_UPDATED_AR.md  APK_READY_AR.md  BUILD_INSTRUCTIONS.md  BUILD_SETUP_AR.md  BUILD_SOLUTION_SUMMARY_AR.md  BUILD_TEST_TRIGGER.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SUMMARY.md  DOWNLOAD_APK_AR.md  FINAL_SUMMARY_AR.md  GRADLE_FIX_NOTES.md  GRADLE_WRAPPER_FIX.md  INSTALLATION_GUIDE.md  Index.html  KOTLIN_CONVERSION_REPORT_AR.md  PROJECT_COMPLETE_AR.md  PROJECT_RESTRUCTURING_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_OLD.md  RESTRUCTURING_COMPLETE.md  TROUBLESHOOTING.md  app-debug-custom.apk  app-debug.apk  build-local.sh  build.gradle  build.gradle.kts  build_apk.sh  gradle.properties  gradlew  gradlew.bat  local_build.sh  manual_build.sh  pubspec.yaml  remote_config.json  settings.gradle  (+4 more)
.githooks/: pre-commit
.github/workflows/: android.yml  build-apk.yml  build.yml  (+2 more)
app/: build.gradle  build.gradle.kts  proguard-rules.pro
common/: build.gradle.kts  consumer-rules.pro
core-llm/: build.gradle
core-ml/: build.gradle.kts  consumer-rules.pro
core-ml/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
core-permissions/: build.gradle
core-strategy/: build.gradle
core-vision/: build.gradle
data/: models.json  stt_models.json  tessdata.json
gradle/: libs.versions.toml
lib/: main.dart
overlay/: build.gradle.kts  consumer-rules.pro
sample_screens/: README.md
screen/: build.gradle.kts  consumer-rules.pro
test/: calorie_calculator_test.dart  memory_test.dart
(+106 files in other folders)
